[package]
name = "recast-lang"
version = "0.1.0"
edition = "2021"
description = "A parser for the RapidRecast Definition Language"
authors = ["RapidRecast", "Hugh Kaznowski"]
license = "AGPL-3.0-only"
repository = "https://github.com/rapidrecast/recast-lang"

[dependencies]
chumsky = "0.9.3"
logos = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
serde_yaml = "0.9"
quick-xml = "0.27"
